# resilientflow

./: .dockerignore  .env.sample  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  run_automl_test.py  run_discovery_test.py  run_history_test.py  run_inference_test.py  run_ingestion_test.py  run_processing_test.py  run_spatial_test.py  run_temporal_test.py
.github/: PULL_REQUEST_TEMPLATE.md
frontend/: package.json
frontend/.storybook/: main.js  preview.js
frontend/src/: App.jsx  InterventionSlider.jsx  InterventionSlider.stories.jsx  InterventionSlider.test.jsx  styles.css
frontend/src-tauri/: tauri.conf.json
scripts/: e2e_discover_intervene.py
src/resilientflow/: pyproject.toml
src/resilientflow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/resilientflow/api/: __init__.py  main.py
src/resilientflow/causal/automl/: __init__.py  feature_selection.py
src/resilientflow/causal/discovery/: tigramite_engine.py
src/resilientflow/causal/inference/: interventions.py
src/resilientflow/causal/spatial/: gnn_loader.py  st_models.py
src/resilientflow/viz/: app.py
src/resilientflow/viz/components/: causal_graph.py  controls.py
src/resilientflow/viz/layouts/: dashboard.py
tests/: test_intervene_api.py
